# cuopt

./: .clang-format  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  GRPC_ARCHITECTURE.md  GRPC_BUILD_STATUS.md  GRPC_PROTOTYPE_STATUS.md  MEMORY_MODEL_SUMMARY.md  PREDICTOR_DATA_COLLECTION.md  README.md  RELEASE-NOTES.md  bilp_reduced_cost_solver.py  build.sh  dependencies.yaml  example_solve_mps.py  pyproject.toml  sonar-project.properties
cpp/: CMakeLists.txt  Makefile  README.md  cuopt_cancel_job.cpp  cuopt_cli.cpp  cuopt_grpc_server.cpp  cuopt_remote_server.cpp
cpp/docs/: DEVELOPER_GUIDE.md
cpp/doxygen/: Doxyfile
cpp/include/cuopt/: error.hpp  logger.hpp
cpp/include/cuopt/linear_programming/: constants.h  cuopt_c.h  data_model_view.hpp  optimization_problem.hpp  solve.hpp  solver_settings.hpp
cpp/include/cuopt/utilities/: timestamp_utils.hpp
cpp/libmps_parser/: CMakeLists.txt
cpp/libmps_parser/include/mps_parser/: data_model_view.hpp  mps_data_model.hpp  mps_writer.hpp  parser.hpp  writer.hpp
cpp/libmps_parser/src/: data_model_view.cpp  mps_data_model.cpp  mps_parser.cpp  mps_parser.hpp  mps_writer.cpp  writer.cpp
cpp/libmps_parser/src/utilities/: error.hpp
cpp/libmps_parser/tests/: CMakeLists.txt  mps_parser_test.cpp
cpp/scripts/: run_dev_server.sh
cpp/src/: CMakeLists.txt
cpp/src/dual_simplex/: CMakeLists.txt  barrier.cu  barrier.hpp  basis_solves.cpp  basis_solves.hpp  basis_updates.cpp  basis_updates.hpp  bb_event.hpp  bb_solve_policy.hpp  bb_worker_state.hpp  bnb_worker.cpp  bnb_worker.hpp  bound_flipping_ratio_test.cpp  bound_flipping_ratio_test.hpp  bounds_strengthening.cpp  bounds_strengthening.hpp  branch_and_bound.cpp  branch_and_bound.hpp  branch_and_bound_worker.hpp  bsp_debug.hpp  conjugate_gradient.hpp  crossover.cpp  cusparse_info.hpp  cusparse_view.cu  cusparse_view.hpp  cuts.cpp  cuts.hpp  dense_matrix.hpp  dense_vector.hpp  device_sparse_matrix.cu  device_sparse_matrix.cuh  diving_heuristics.cpp  diving_heuristics.hpp  diving_queue.hpp  dual_simplex_features.hpp  folding.cpp  folding.hpp  iterative_refinement.hpp  logger.hpp  mip_node.cpp  (+32 more)
cpp/src/linear_programming/: CMakeLists.txt  cuopt_c.cpp  cuopt_c_internal.hpp  cusparse_view.cu  cusparse_view.hpp  optimization_problem.cu  pdhg.cu  pdhg.hpp  pdlp.cu  pdlp.cuh  pdlp_climber_strategy.hpp  pdlp_constants.hpp  pdlp_features.hpp  pdlp_hyper_params.cu  pdlp_warm_start_data.cu  saddle_point.cu  saddle_point.hpp  solve.cu  solve.cuh  solver_settings.cu  solver_solution.cu  solver_termination.hpp  swap_and_resize_helper.cuh  translate.hpp  user_interrupt_handler.hpp  utils.cuh
cpp/src/linear_programming/initial_scaling_strategy/: initial_scaling.cu  initial_scaling.cuh
cpp/src/linear_programming/optimal_batch_size_handler/: optimal_batch_size_handler.cu  optimal_batch_size_handler.hpp
cpp/src/linear_programming/restart_strategy/: localized_duality_gap_container.cu  localized_duality_gap_container.hpp  pdlp_restart_strategy.cu  pdlp_restart_strategy.cuh  weighted_average_solution.cu  weighted_average_solution.hpp
cpp/src/linear_programming/step_size_strategy/: adaptive_step_size_strategy.cu  adaptive_step_size_strategy.hpp
cpp/src/linear_programming/termination_strategy/: convergence_information.cu  convergence_information.hpp  infeasibility_information.cu  infeasibility_information.hpp  termination_strategy.cu  termination_strategy.hpp
cpp/src/linear_programming/utilities/: cuopt_remote.proto  cuopt_remote_service.proto  cython_solve.cu  logger_init.hpp  ping_pong_graph.cuh  problem_checking.cu  problem_checking.cuh  protobuf_serializer.cu  remote_solve.cu  remote_solve_grpc.cpp  remote_solve_grpc.hpp
cpp/src/math_optimization/: CMakeLists.txt  solution_reader.hpp  solution_writer.hpp  solver_settings.cu
cpp/src/mip/: CMakeLists.txt  solve.cu  solver.cu  solver.cuh  solver_context.cuh  solver_settings.cu  solver_solution.cu  utils.cuh
cpp/src/mip/diversity/: assignment_hash_map.cu  assignment_hash_map.cuh  diversity_config.hpp  diversity_manager.cu  diversity_manager.cuh  multi_armed_bandit.cu  multi_armed_bandit.cuh  population.cu  population.cuh  weights.cuh
cpp/src/mip/feasibility_jump/: feasibility_jump.cu  feasibility_jump.cuh  feasibility_jump_impl_common.cuh  feasibility_jump_kernels.cu  feasibility_jump_kernels.cuh  fj_cpu.cu  fj_cpu.cuh  utils.cuh  (+1 more)
cpp/src/routing/: CMakeLists.txt  assignment.cu  cuda_graph.cuh  fleet_info.hpp  fleet_order_constraints.hpp  ges_solver.cu  order_info.hpp
cpp/src/utilities/: copy_helpers.hpp  cuda_helpers.cuh  double_buffer.hpp  driver_helpers.cuh  logger.cpp  logger.hpp  macros.cuh  memory_instrumentation.hpp  omp_helpers.hpp  pcg.hpp  pcgenerator.hpp  producer_sync.hpp  timer.hpp  timestamp_utils.cpp  timing_utils.hpp  tsan_suppressions.txt  unique_pinned_ptr.hpp  version_info.cpp  version_info.hpp  work_limit_timer.hpp  work_unit_predictor.cpp  work_unit_predictor.hpp  work_unit_scheduler.cpp  work_unit_scheduler.hpp
cpp/tests/: CMakeLists.txt
cpp/tests/distance_engine/: waypoint_matrix_test.cpp  waypoint_matrix_test.hpp
cpp/tests/dual_simplex/: CMakeLists.txt
cpp/tests/examples/: CMakeLists.txt
cpp/tests/linear_programming/: CMakeLists.txt  pdlp_test.cu
cpp/tests/mip/: CMakeLists.txt  bounds_standardization_test.cu  determinism_utils.cuh  diversity_test.cu  doc_example_test.cu  elim_var_remap_test.cu  empty_fixed_problems_test.cu  feasibility_jump_tests.cu  incumbent_callback_test.cu  integer_with_real_bounds.cu  load_balancing_test.cu  local_search_test.cu  mip_utils.cuh  miplib_test.cu  multi_probe_test.cu  presolve_test.cu  problem_test.cu  termination_test.cu  unit_test.cu
cpp/tests/qp/: CMakeLists.txt
cpp/tests/routing/: CMakeLists.txt  routing_test.cuh
cpp/tests/utilities/: CMakeLists.txt  Eval.h  Metric.h  base_fixture.hpp  helper_cupti.h  test_cli.cpp  test_cupti.cu
python/cuopt/: CMakeLists.txt  pyproject.toml
python/cuopt/cuopt/: __init__.py  _version.py
python/libcuopt/: CMakeLists.txt  pyproject.toml
python/libcuopt/libcuopt/: load.py
(+423 files in other folders)
